Separate by loose parts weird result. #85436

Closed
opened 2021-02-06 22:55:07 +07:00 by Gilberto Rodrigues · 13 comments

Blender Version
Broken: 2.91, 2.93 alpha

Short description of error
Separate by loose parts can have a weird result.

Exact steps for others to reproduce the error
Open attached file
"a" to select all
Ctrl+a>>Visual geometry to mesh
tab to edit mode
"a" to select all
p>>separate by loose parts

bug12.blend

image.png
image.png

**Blender Version** Broken: 2.91, 2.93 alpha **Short description of error** Separate by loose parts can have a weird result. **Exact steps for others to reproduce the error** Open attached file "a" to select all Ctrl+a>>Visual geometry to mesh tab to edit mode "a" to select all p>>separate by loose parts [bug12.blend](https://archive.blender.org/developer/F9678822/bug12.blend) ![image.png](https://archive.blender.org/developer/F9721716/image.png) ![image.png](https://archive.blender.org/developer/F9721741/image.png)

Added subscriber: @Gilberto.R

Added subscriber: @Gilberto.R

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-02-08 09:42:14 +07:00

Can confirm, will check.

Can confirm, will check.

This needs more investigation.

notes:

  • copy-pasting the objects somehow "cleans it up" (works then)
  • appending the objects into a fresh file works
  • doing the same in objectmode works
  • reducing the amount of loose parts make it work at some point
    when it goes wrong:
  • objects are actually created (having valid meshes)
  • those faulty objects are not selected (this is the case if they are separated correctly)
  • undoing the Separate By Loose parts will then crash
  • deleting any object will refresh the viewport correctly (everything gets visible then)
  • toggeling Hide Viewport will refresh the viewport correctly (everything gets visible then)
This needs more investigation. notes: - copy-pasting the objects somehow "cleans it up" (works then) - appending the objects into a fresh file works - doing the same in objectmode works - reducing the amount of loose parts make it work at some point when it goes wrong: - objects are actually created (having valid meshes) - those faulty objects are not selected (this is the case if they are separated correctly) - undoing the `Separate By Loose parts` will then crash - deleting any object will refresh the viewport correctly (everything gets visible then) - toggeling Hide Viewport will refresh the viewport correctly (everything gets visible then)

backtrace for the undo crash:

base->object is NULL then

1   BKE_scene_object_base_flag_sync_from_base scene.c           2915 0x3550f1a 
2   BKE_scene_set_background                  scene.c           2126 0x354f6c8 
3   setup_app_data                            blendfile.c       386  0x4ab8fcf 
4   setup_app_blend_file_data                 blendfile.c       416  0x4ab9063 
5   BKE_blendfile_read_from_memfile           blendfile.c       524  0x4ab94b7 
6   BKE_memfile_undo_decode                   blender_undo.c    88   0x4ab833f 
7   memfile_undosys_step_decode               memfile_undo.c    193  0x47c8c17 
8   undosys_step_decode                       undo_system.c     214  0x4b04d2c 
9   BKE_undosys_step_load_data_ex             undo_system.c     809  0x4b0681f 
10  BKE_undosys_step_undo_with_data_ex        undo_system.c     870  0x4b069e4 
11  BKE_undosys_step_undo_with_data           undo_system.c     880  0x4b06a13 
12  BKE_undosys_step_undo                     undo_system.c     889  0x4b06a51 
13  ed_undo_step_direction                    ed_undo.c         278  0x47c69f8 
14  ed_undo_exec                              ed_undo.c         489  0x47c7305 
15  wm_operator_invoke                        wm_event_system.c 1332 0x399ca06 
16  wm_handler_operator_call                  wm_event_system.c 2161 0x399e7e3 
17  wm_handlers_do_keymap_with_keymap_handler wm_event_system.c 2486 0x399f517 
18  wm_handlers_do_intern                     wm_event_system.c 2782 0x39a0488 
19  wm_handlers_do                            wm_event_system.c 2908 0x39a0975 
20  wm_event_do_handlers                      wm_event_system.c 3439 0x39a211c 
... <More>              
backtrace for the undo crash: base->object is NULL then ``` 1 BKE_scene_object_base_flag_sync_from_base scene.c 2915 0x3550f1a 2 BKE_scene_set_background scene.c 2126 0x354f6c8 3 setup_app_data blendfile.c 386 0x4ab8fcf 4 setup_app_blend_file_data blendfile.c 416 0x4ab9063 5 BKE_blendfile_read_from_memfile blendfile.c 524 0x4ab94b7 6 BKE_memfile_undo_decode blender_undo.c 88 0x4ab833f 7 memfile_undosys_step_decode memfile_undo.c 193 0x47c8c17 8 undosys_step_decode undo_system.c 214 0x4b04d2c 9 BKE_undosys_step_load_data_ex undo_system.c 809 0x4b0681f 10 BKE_undosys_step_undo_with_data_ex undo_system.c 870 0x4b069e4 11 BKE_undosys_step_undo_with_data undo_system.c 880 0x4b06a13 12 BKE_undosys_step_undo undo_system.c 889 0x4b06a51 13 ed_undo_step_direction ed_undo.c 278 0x47c69f8 14 ed_undo_exec ed_undo.c 489 0x47c7305 15 wm_operator_invoke wm_event_system.c 1332 0x399ca06 16 wm_handler_operator_call wm_event_system.c 2161 0x399e7e3 17 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c 2486 0x399f517 18 wm_handlers_do_intern wm_event_system.c 2782 0x39a0488 19 wm_handlers_do wm_event_system.c 2908 0x39a0975 20 wm_event_do_handlers wm_event_system.c 3439 0x39a211c ... <More> ```
Philipp Oeser removed their assignment 2021-02-09 17:25:18 +07:00

Having spent too much time here for a triager, I would like to pass this on to the Modeling module to have a look at.

Having spent too much time here for a triager, I would like to pass this on to the `Modeling` module to have a look at.

This issue was referenced by a70b625a10

This issue was referenced by a70b625a10029ef887514c42010731d3140ab7c5

This issue was referenced by 168965835c

This issue was referenced by 168965835c98c51c8f80e564768c9eae5925acbf

This issue was referenced by f8abc3fb2f

This issue was referenced by f8abc3fb2fd3ec883a13ff5e692550b38479f81f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-08-03 10:14:31 +07:00

Solved, an example of poor naming leading to confusing/incorrect logic.

Solved, an example of poor naming leading to confusing/incorrect logic.

In #85436#1200874, @ideasman42 wrote:
Solved, an example of poor naming leading to confusing/incorrect logic.

Thx!

> In #85436#1200874, @ideasman42 wrote: > Solved, an example of poor naming leading to confusing/incorrect logic. Thx!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85436
There is no content yet.